[tool.poetry]
name = "aula09-bootcamp"
version = "0.1.0"
description = ""
authors = ["André Moraes <andrelamounier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
sentry-sdk = "^1.45.0"
pandas = "^2.2.2"
tenacity = "^8.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
